webgl intro journal

--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -73,6 +73,16 @@
                         </div> <!-- content_info -->
                         </div>
                     </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">Intro to WebGL</h5>
+                          <p>WebGL Hello triangle. With rainbows!</p>
+                          <div class="content_info">
+                            <a href="matrix4.html" class="button buttonSubtle">Read More</a>
+                            <p class="content_info">3/19/2023</p>
+                        </div> <!-- content_info -->
+                        </div>
+                    </div> <!-- card -->
                 </div> <!-- cardGrid -->
             </div> <!-- Body -->
         </main>
