webgl journal update

--- a/projects/graphics_journal/journalTemplate.html
+++ b/projects/graphics_journal/journalTemplate.html
@@ -40,6 +40,10 @@
                         <img class="journalImage" src="/assets/journals/spot_the_error.png">
                         <figcaption class="imgCaption">Image</figcaption>
                     </figure>
+                    <figure>
+                        <video class="journalImage" src="/assets/journals/raytracer/fastLight.mov" controls autoplay muted loop></video>
+                        <figcaption class="imgCaption">Video</figcaption>
+                    </figure>
                 </div>
             </div> <!-- journalEntry -->
         </main>
