--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- Splash Image -->
                 <div>
                     <div class="splashHalf">
-                        <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
+                        <img alt="Pretty splash image" src="assets/splashes/raytracer.png">
                     </div>
                     <div class="splashHalf">
                         <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
@@ -60,6 +60,17 @@
             </div>
         </main>
         <footer>
+            <div class="socialGrid">
+                <div class="socialIcon">
+                    <a rel="me" href="https://mstdn.games/@crazycowmm"><img src="assets/icons/mastodon.svg"></a>
+                </div>
+                <div class="socialIcon">
+                    <a href="https://twitter.com/crazycowmm"><img src="assets/icons/twitter.svg"></a>
+                </div>
+                <div class="socialIcon">
+                    <a rel="me" href="https://youtube.com/crazycowmm"><img src="assets/icons/youtube.png"></a>
+                </div>
+            </div>
             © Ben Meier 2023
         </footer>
 
