--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -93,6 +93,16 @@
                         </div> <!-- content_info -->
                         </div>
                     </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">Phong is a Cool Guy</h5>
+                          <p>Implementing phong lighting!</p>
+                          <div class="content_info">
+                            <a href="texturing.html" class="button buttonSubtle">Read More</a>
+                            <p class="content_info">4/24/2023</p>
+                        </div> <!-- content_info -->
+                        </div>
+                    </div> <!-- card -->
                 </div> <!-- cardGrid -->
             </div> <!-- Body -->
         </main>
