--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -98,7 +98,7 @@
                           <h5 class="content_title">Phong is a Cool Guy</h5>
                           <p>Implementing phong lighting!</p>
                           <div class="content_info">
-                            <a href="texturing.html" class="button buttonSubtle">Read More</a>
+                            <a href="phong.html" class="button buttonSubtle">Read More</a>
                             <p class="content_info">4/24/2023</p>
                         </div> <!-- content_info -->
                         </div>
