--- a/projects/graphics_journal/index.html
+++ b/projects/graphics_journal/index.html
@@ -103,6 +103,16 @@
                         </div> <!-- content_info -->
                         </div>
                     </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">Chad-ows</h5>
+                          <p>Shadows! How neat!</p>
+                          <div class="content_info">
+                            <a href="shadows.html" class="button buttonSubtle">Read More</a>
+                            <p class="content_info">5/1/2023</p>
+                        </div> <!-- content_info -->
+                        </div>
+                    </div> <!-- card -->
                 </div> <!-- cardGrid -->
             </div> <!-- Body -->
         </main>
