add most modern projects to portfolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- Splash Image -->
                 <div>
                     <div class="splashHalf">
-                        <img alt="Pretty splash image" src="assets/splashes/raytracer.png">
+                        <img id="splashImage" alt="Pretty splash image" src="assets/splashes/raytracer.png">
                     </div>
                     <div class="splashHalf">
                         <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
