--- a/projects/index.html
+++ b/projects/index.html
@@ -37,24 +37,38 @@
                       Featured
                     </div>
                     <div class="card_text">
-                      <h5 class="content_title">WebGL Programming Journal</h5>
-                      <p>A journal created for CSUMBs CST325 course which is an initial exploration into graphics programming using WebGL.</p>
-                      <a href="graphics_journal/" class="button buttonRegular">Check it out</a>
+                      <h5 class="content_title">Ghost Hunter Inc.</h5>
+                      <p>A short horror/puzzle game created for the CSUMB CST326 final in Unity!</p>
+                      <a href="https://crazycowmm.itch.io/ghost-hunter-inc" class="button buttonRegular">Check it out</a>
                     </div>
                   </div>
                 <div class="cardGrid">
                     <div class="content_card">
                         <div class="card_text">
+                          <h5 class="content_title">WebGL Programming Journal</h5>
+                          <p>A journal created for CSUMBs CST325 course which is an initial exploration into graphics programming using WebGL.</p>
+                          <a href="solar_system/" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
+                          <h5 class="content_title">WebGL Solar System</h5>
+                          <p>A solar system built in WebGL from scratch. Utilizing Phong and point lighting, textures and shaders. This project is the culmination of techniques learned in the WebGL Programming Journal</p>
+                          <a href="solar_system/" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_text">
                           <h5 class="content_title">MCCreations</h5>
                           <p>A Minecraft Community site I built from the ground up using Wix. I am currently working on moving this to a custom Node.JS application maybe you'll see that here some day instead!</p>
-                          <a href="mccreations/" class="button buttonRegular">Check it out!</a>
+                          <a href="https://mccreations.net" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
                         <div class="card_text">
                           <h5 class="content_title">Roodit</h5>
                           <p>A mockup social media site created for my Internet Programming final with a team of 3 other students. Uses Node.js, Express and MySQL and includes accounts, and making and liking posts!</p>
-                          <a href="roodit/" class="button buttonRegular">Check it out!</a>
+                          <a href="https://replit.com/@BenjaminMeier/Team-14-Final-Project" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
