some work on Minecraft portfolio

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -17,10 +17,10 @@
                     <a class="navLink" href="/">Home</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink navLinkSelected" href="/projects">Projects</a>
+                    <a class="navLink" href="/projects">Projects</a>
                 </li>
 <li class="navItem">
-                    <a class="navLink" href="/minecraft">Minecraft</a>
+                    <a class="navLink navLinkSelected" href="/minecraft">Minecraft</a>
                 </li>
                 <li class="navItem">
                     <a class="navLink" href="/about">About</a>
@@ -36,25 +36,28 @@
                     <div class="cardHeader">
                       Featured
                     </div>
+                    <img class="card_img" src="/assets/minecraft/CMCB_Thumbnail_0.jpg">
                     <div class="card_text">
-                      <h5 class="content_title">Ghost Hunter Inc.</h5>
-                      <p>A short horror/puzzle game created for the CSUMB CST326 final in Unity!</p>
-                      <a href="https://crazycowmm.itch.io/ghost-hunter-inc" class="button buttonRegular">Check it out</a>
+                      <h5 class="content_title">Craftee's MC But...</h5>
+                      <p>It's Minecraft But... with Craftee! Try and help Craftee escape all while surviving the crazy challenges by the developers</p>
+                      <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=805101ce-e99c-49be-87ee-8b779ae78e60" class="button buttonRegular">Check it out</a>
                     </div>
                   </div>
                 <div class="cardGrid">
                     <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/LMM_Thumbnail_0.jpg">
                         <div class="card_text">
-                          <h5 class="content_title">WebGL Solar System</h5>
-                          <p>A solar system built in WebGL from scratch. Utilizing Phong and point lighting, textures and shaders. This project is the culmination of techniques learned in the WebGL Programming Journal</p>
-                          <a href="solar_system/" class="button buttonRegular">Check it out!</a>
+                          <h5 class="content_title">Lucky's Minigame Mayhem</h5>
+                          <p>A Minecraft Marketplace Project commissioned by Microsoft for the yearly Marketplace Celebration. Play through 15 minigames celebrating the diversity of Marketplace content</p>
+                          <a href="https://www.minecraft.net/en-us/pdp.html?id=b569f904-769f-4de7-a929-3dd9f1555fa1" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/BP_Thumbnail_0.jpg">
                         <div class="card_text">
-                          <h5 class="content_title">WebGL Programming Journal</h5>
-                          <p>A journal created for CSUMBs CST325 course which is an initial exploration into graphics programming using WebGL.</p>
-                          <a href="solar_system/" class="button buttonRegular">Check it out!</a>
+                          <h5 class="content_title">Biome Pets</h5>
+                          <p>Craft 30+ unique pets each themed off of biomes in Minecraft! Evolve them to help defend you in battle!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=95ca3f69-5845-4076-8d23-3d4d254ff040" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
