update projects to include some content for all

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Splash -->
             <div class="splash">
                 <!-- Splash Image -->
-                <div>
+                <div class="splashBackground">
                     <div class="splashHalf">
                         <img id="splashImage" alt="Pretty splash image" src="assets/splashes/raytracer.png">
                     </div>
