--- a/projects/index.html
+++ b/projects/index.html
@@ -36,6 +36,9 @@
                     <div class="cardHeader">
                       Featured
                     </div>
+                    <div class="card_img">
+                        <img src="/assets/projects/ghost_hunter.jpeg">
+                    </div>
                     <div class="card_text">
                       <h5 class="content_title">Ghost Hunter Inc.</h5>
                       <p>A short horror/puzzle game created for the CSUMB CST326 final in Unity!</p>
@@ -44,38 +47,63 @@
                   </div>
                 <div class="cardGrid">
                     <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/solar_system.png">
+                        </div>
                         <div class="card_text">
                           <h5 class="content_title">WebGL Solar System</h5>
-                          <p>A solar system built in WebGL from scratch. Utilizing Phong and point lighting, textures and shaders. This project is the culmination of techniques learned in the WebGL Programming Journal</p>
+                          <p>A solar system built in WebGL from scratch. Utilizing Phong and point lighting, textures and shaders. This project is the culmination of techniques learned in the WebGL Programming Journal.</p>
                           <a href="solar_system/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/journal.png">
+                        </div>
                         <div class="card_text">
                           <h5 class="content_title">WebGL Programming Journal</h5>
                           <p>A journal created for CSUMBs CST325 course which is an initial exploration into graphics programming using WebGL.</p>
-                          <a href="solar_system/" class="button buttonRegular">Check it out!</a>
+                          <a href="graphics_journal/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
-                    <div class="content_card">
+                    <!-- <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/minecraft/LMM_Thumbnail_0.jpg">
+                        </div>
                         <div class="card_text">
                           <h5 class="content_title">Lucky's Minigame Mayhem</h5>
-                          <p>A Minecraft Marketplace Project commissioned by Microsoft for the yearly Marketplace Celebration. </p>
+                          <p>A Minecraft Marketplace Project commissioned by Microsoft for the yearly Marketplace Celebration. Made with the team at Logdotzip Games.</p>
                           <a href="luckys/" class="button buttonRegular">Check it out!</a>
                         </div>
-                    </div> <!-- card -->
+                    </div> card -->
                     <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/mccreations/MCCcreationsLogo.png">
+                        </div>
                         <div class="card_text">
                           <h5 class="content_title">MCCreations</h5>
-                          <p>A Minecraft Community site I built from the ground up using Wix. I am currently working on moving this to a custom Node.JS application maybe you'll see that here some day instead!</p>
-                          <a href="https://mccreations.net" class="button buttonRegular">Check it out!</a>
+                          <p>A Minecraft Community site built from the ground up using Wix. Takes advantage of their Javascript libraries and managed database to serve content from hundreds of creators.</p>
+                          <a href="mccreations/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/mccreations_next/defaultBanner.png">
+                        </div>
+                        <div class="card_text">
+                          <h5 class="content_title">MCCreations Next</h5>
+                          <p>The next generation of MCCreations with a Next.js frontend and a Node.js - Express backend using MongoDB</p>
+                          <a href="https://next.mccreations.net" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/roodit.png">
+                        </div>
                         <div class="card_text">
                           <h5 class="content_title">Roodit</h5>
                           <p>A mockup social media site created for my Internet Programming final with a team of 3 other students. Uses Node.js, Express and MySQL and includes accounts, and making and liking posts!</p>
-                          <a href="https://replit.com/@BenjaminMeier/Team-14-Final-Project" class="button buttonRegular">Check it out!</a>
+                          <a href="roodit/" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                 </div> <!-- cardGrid -->
